# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp  image_processor.h
Filter/: filter.cpp  filter.h
Image/: Color.cpp  Color.h  Image.cpp  Image.h
Parser/: parser.cpp  parser.h
Reading_and_writing/: Utils.h  reader.cpp  reader.h  writer.cpp  writer.h
